[package]
name = "multiple-choice-guessing-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
plotters = "0.3.5"
progress-observer = "3.2.0"
rand = "0.8.5"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive"] }
